--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {erl_opts, [debug_info]}.
 {deps, [
-      {observer_cli,       {git, "https://github.com/zhongwencool/observer_cli.git", {branch, "master"}}},
+      {observer_cli,       {git, "https://github.com/zhongwencool/observer_cli", {branch, "master"}}},
       {gproc       , ".*", {git, "https://github.com/uwiger/gproc",          {branch, "master"}}},
-      {redbug      , ".*", {git, "https://github.com/massemanet/redbug.git", {tag, "1.2.1"}}},
+      {redbug      , ".*", {git, "https://github.com/massemanet/redbug",     {tag, "1.2.1"}}},
       {erlcloud    , ".*", {git, "https://github.com/erlcloud/erlcloud",     {branch, "master"}}},
       {jsone       , ".*", {git, "https://github.com/sile/jsone",            {branch, "master"}}},
       {meck        , "0.8.13"}
