Unit test and CloudFormation
 - Unit tests were implemented and some corner cases were identified.
 - Some bugfixes were found
 - CloudFormation template created and added to aws folder

target:3

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,5 @@
 {erl_opts, [debug_info]}.
 {deps, [
-      {observer_cli,       {git, "https://github.com/zhongwencool/observer_cli", {branch, "master"}}},
-      {gproc       , ".*", {git, "https://github.com/uwiger/gproc",          {branch, "master"}}},
       {redbug      , ".*", {git, "https://github.com/massemanet/redbug",     {tag, "1.2.1"}}},
       {erlcloud    , ".*", {git, "https://github.com/erlcloud/erlcloud",     {branch, "master"}}},
       {jsone       , ".*", {git, "https://github.com/sile/jsone",            {branch, "master"}}},
@@ -12,3 +10,27 @@
   % {config, "config/sys.config"},
     {apps, [miniclip]}
 ]}.
+
+{relx, [{release,{miniclip, "1.0.0"}, []},
+  {dev_mode, false},
+  {vm_args_src, "config/vm.args.src"}
+]}.
+
+%% == Common Test ==
+
+%% {erl_opts, [...]}, but for CT runs
+{ct_compile_opts, []}.
+%% {erl_first_files, ...} but for CT runs
+{ct_first_files, []}.
+%% Keep only the logs of the last 5 runs
+{ct_opts, [{keep_logs, 5}, {verbose,  true}]}.
+
+%% Whether to enable coverage reporting where commands support cover.
+{cover_enabled, false}.
+{cover_export_enabled, true}.
+%%
+%% %% Modules to exclude from cover
+{cover_excl_mods, [miniclip_dbg]}.
+
+%% Options to pass to cover provider
+{cover_opts, [verbose]}.
