Final fixes and discussion
target:4

--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,7 @@
 {cover_export_enabled, true}.
 %%
 %% %% Modules to exclude from cover
-{cover_excl_mods, [miniclip_dbg]}.
+{cover_excl_mods, [miniclip_dbg, miniclip_server_SUITE]}.
 
 %% Options to pass to cover provider
 {cover_opts, [verbose]}.
