--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,17 @@
+%% == Erlang Compiler ==
+{minimum_otp_vsn, "21.0"}.
+
 {erl_opts, [debug_info]}.
+
+%% == Plugins ==
+{project_plugins        , [coveralls]}.
+
+%% == Deps ==
 {deps, [
       {redbug      , ".*", {git, "https://github.com/massemanet/redbug",     {tag, "1.2.1"}}},
       {erlcloud    , ".*", {git, "https://github.com/erlcloud/erlcloud",     {branch, "master"}}},
-      {jsone       , ".*", {git, "https://github.com/sile/jsone",            {branch, "master"}}},
-      {meck        , "0.8.13"}
-    ]}.
+      {jsone       , ".*", {git, "https://github.com/sile/jsone",            {branch, "master"}}}
+]}.
 
 {shell, [
   % {config, "config/sys.config"},
@@ -16,6 +23,19 @@
   {vm_args_src, "config/vm.args.src"}
 ]}.
 
+%% == Profiles info ==
+
+{profiles, [{test, [{deps, [ {meck,         "0.8.13"}
+                           ]
+                   }]
+           }]
+}.
+
+%% == Coveralls info ==
+
+{coveralls_coverdata    , "_build/test/cover/ct.coverdata"}.
+{coveralls_service_name , "travis-ci"}.
+
 %% == Common Test ==
 
 %% {erl_opts, [...]}, but for CT runs
@@ -26,10 +46,10 @@
 {ct_opts, [{keep_logs, 5}, {verbose,  true}]}.
 
 %% Whether to enable coverage reporting where commands support cover.
-{cover_enabled, false}.
+{cover_enabled, true}.
 {cover_export_enabled, true}.
-%%
-%% %% Modules to exclude from cover
+
+%% Modules to exclude from cover
 {cover_excl_mods, [miniclip_dbg, miniclip_server_SUITE]}.
 
 %% Options to pass to cover provider
